opam-version: "1.2"
maintainer: "jonathan.ludlam@citrix.com"
authors: ["xen-api@lists.xensource.com"]
license: "ISC"
homepage: "https://github.com/xapi-project/ezxenstore"
bug-reports: "https://github.com/xapi-project/ezxenstore/issues"
dev-repo: "https://github.com/xapi-project/ezxenstore.git"

build: [[ "dune" "build" "-p" name "-j" jobs ]]

depends: [
  "dune" {build}

  "base-threads"
  "cmdliner"
  "logs"
  "uuidm"
  "xenctrl"
  "xenstore"
  "xenstore_transport"
]
