opam-version: "2.0"
maintainer: "jonathan.ludlam@citrix.com"
authors: ["xen-api@lists.xensource.com"]
license: "ISC"
homepage: "https://github.com/xapi-project/ezxenstore"
bug-reports: "https://github.com/xapi-project/ezxenstore/issues"
dev-repo: "git+https://github.com/xapi-project/ezxenstore.git"
build: [[ "dune" "build" "-p" name "-j" jobs ]]
depends: [
  "ocaml"
  "dune" {build & >= "1.4"}
  "cmdliner"
  "logs"
  "uuidm"
  "xenctrl"
  "xenstore"
  "xenstore_transport"
]
synopsis:
  "An easy-to-use interface to xenstore"
description: """
An easy-to-use xenstore library with a simplified interface geared
towards use within a daemon that maintains a single connection to
xenstored."""
