opam-version: "2.0"
maintainer: "xen-api@lists.xen.org"
authors: "xen-api@lists.xen.org"
homepage: "https://github.com/xapi-project/"
bug-reports: "https://github.com/xapi-project/forkexecd/issues"
dev-repo: "git://github.com/xapi-project/forkexecd"
tags: [ "org:xapi-project" ]

build: [[ "dune" "build" "-p" name "-j" jobs ]]

depends: [
  "ocaml"
  "dune" {build}
  "base-threads"
  "fd-send-recv"
  "rpc" {>= "1.9.51"}
  "uuidm"
  "xapi-idl"
  "xapi-stdext-monadic"
  "xapi-stdext-pervasives"
  "xapi-stdext-unix"
]
synopsis: "Sub-process control service for xapi"
description:
  "This daemon creates and manages sub-processes on behalf of xapi."
url {
  src: "https://github.com/xapi-project/forkexecd/archive/master.tar.gz"
}
