opam-version: "2.0"
maintainer: "xen-api@lists.xen.org"
authors: "xen-api@lists.xen.org"
homepage: "https://xapi-project.github.io/"
bug-reports: "https://github.com/xapi-project/xen-api.git"
dev-repo: "git+https://github.com/xapi-project/xen-api.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
available: [ os = "linux" ]
depends: [
  "ocaml"
  "dune"
  "astring"
  "base64" {>= "3.1.0"}
  "polly"
  "rpclib"
  "sha"
  "stunnel"
  "uuid"
  "xapi-idl"
  "xapi-log"
  "xapi-stdext-date"
  "xapi-stdext-pervasives"
  "xapi-stdext-threads"
  "xapi-stdext-unix"
  "xml-light2"
  "ounit" {with-test & >= "2.0.0"}
]
synopsis: "Library required by xapi"
description: """
These libraries are provided for backwards compatibility only.
No new code should use these libraries."""
url {
  src:
    "https://github.com/xapi-project/xen-api/archive/master.tar.gz"
}
