opam-version: "2.0"
name: "message-switch-core"
maintainer: "xen-api@lists.xen.org"
authors: [ "xen-api@lists.xen.org" ]
homepage: "https://github.com/xapi-project/message-switch"
bug-reports: "https://github.com/xapi-project/message-switch/issues"
dev-repo: "git://github.com/xapi-project/message-switch"
tags: [ "org:xapi-project" ]
build: [
  ["./configure" "--bindir" "%{bin}%"]
  [ "jbuilder" "build" "-p" name "-j" jobs ]
]
depends: [
  "ocaml"
  "dune" {build & >= "1.4"}
  "ocamlfind" {build}
  "odoc" {with-doc}
  "astring"
  "base-unix"
  "cohttp" {>= "0.21.1"}
  "ocaml-migrate-parsetree"
  "ppx_deriving_rpc"
  "ppx_sexp_conv"
  "rpclib"
  "sexplib"
  "mtime" {>= "1.0.0" & < "2.0.0"}
  "mirage-block-unix" {>= "2.4.0"}
  "shared-block-ring" {>= "2.3.0"}
]
synopsis: "A simple store-and-forward message switch"
description: """
The switch stores messages in queues with well-known names. Clients use
a simple HTTP protocol to enqueue and dequeue messages."""
url {
  src: "https://github.com/xapi-project/message-switch/archive/master.tar.gz"
}
