opam-version: "2.0"
name: "message-switch-unix"
maintainer: "xen-api@lists.xen.org"
authors: [ "xen-api@lists.xen.org" ]
homepage: "https://github.com/xapi-project/message-switch"
bug-reports: "https://github.com/xapi-project/message-switch/issues"
dev-repo: "git://github.com/xapi-project/message-switch"
tags: [ "org:xapi-project" ]
build: [
  ["./configure" "--bindir" "%{bin}%"]
  [ "jbuilder" "build" "-p" name "-j" jobs ]
]
depends: [
  "ocaml"
  "jbuilder" {build}
  "ocamlfind" {build}
  "message-switch-core"
]
synopsis: "A simple store-and-forward message switch."
description: """
The switch stores messages in queues with well-known names. Clients use
a simple HTTP protocol to enqueue and dequeue messages."""
url {
  src: "https://github.com/xapi-project/message-switch/archive/master.tar.gz"
}
