opam-version: "1.2"
name: "message-switch"
maintainer: "xen-api@lists.xen.org"
authors: [ "xen-api@lists.xen.org" ]
homepage: "https://github.com/xapi-project/message-switch"
bug-reports: "https://github.com/xapi-project/message-switch/issues"
dev-repo: "git://github.com/xapi-project/message-switch"
tags: [ "org:xapi-project" ]
build: [
  ["./configure" "--bindir" "%{bin}%"]
  [ "jbuilder" "build" "-p" name "-j" jobs ]
]
build-test: [
  [ "jbuilder" "runtest" "-p" name "-j" jobs ]
]
depends: [
  "jbuilder" {build}
  "ocamlfind" {build}
  "message-switch-lwt"
  "message-switch-unix"
  "cmdliner"
  "cohttp-lwt-unix"
  "io-page-unix"
  "cohttp-async" { >= "1.0.2" }
  "message-switch-async" {test}
]

