opam-version: "1.2"
version: "v0.11.0"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/ppx_here"
bug-reports: "https://github.com/janestreet/ppx_here/issues"
dev-repo: "git+https://github.com/janestreet/ppx_here.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "base"                    {>= "v0.11" & < "v0.12"}
  "jbuilder"                {build & >= "1.0+beta18.1"}
  "ocaml-migrate-parsetree" {>= "1.0"}
  "ppxlib"                  {>= "0.1.0"}
]
available: [ ocaml-version >= "4.04.1" ]
descr: "
Expands [%here] into its location

Part of the Jane Street's PPX rewriters collection.
"
