opam-version: "1.2"
version: "v0.11.0"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/ppx_sexp_value"
bug-reports: "https://github.com/janestreet/ppx_sexp_value/issues"
dev-repo: "git+https://github.com/janestreet/ppx_sexp_value.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "base"                    {>= "v0.11" & < "v0.12"}
  "ppx_here"                {>= "v0.11" & < "v0.12"}
  "ppx_sexp_conv"           {>= "v0.11" & < "v0.12"}
  "jbuilder"                {build & >= "1.0+beta18.1"}
  "ocaml-migrate-parsetree" {>= "1.0"}
  "ppxlib"                  {>= "0.1.0"}
]
available: [ ocaml-version >= "4.04.1" ]
descr: "
A ppx rewriter that simplifies building s-expressions from ocaml values

Part of the Jane Street's PPX rewriters collection.
"
